# fly_analysis

./: .gitignore  README.md  environment.yaml  fsstruct.txt  hello.py  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  flyanalysis.rst  index.rst  modules.rst
flyanalysis/: braidz.py  plotting.py  trajectory.py
notebooks/: 20230626_161309.csv  20230714_151827.csv  20230801_134131.csv  BlurryVideoBraidPosition.ipynb  BuchsbaumSchnell2024.ipynb  HighSpeedVideos.ipynb  J53_Kir_Analysis.ipynb  LoomingSaccadesWTCS.ipynb  MultiBraidAnalysis.ipynb  OptoAnalysis.ipynb  SaccadesAnalysis.ipynb  Stim_analysis.ipynb  Stim_vs_Spont_Saccades.ipynb  Stim_vs_Spont_Saccades.py  TurnDirectionOpto.ipynb  VideoAnalysis.ipynb  WildTypeAnalysis.ipynb  angular_velocity_analysis.ipynb  ax_analysis.ipynb  basic_analysis.ipynb  example_analysis.ipynb  exploratory_data_analysis.ipynb  extract_csv_from_braidz.ipynb  extract_data_from_videos.ipynb  file_contents.ipynb  kir_analysis.ipynb  kir_analysis_example.ipynb  looming_saccades_over_time.ipynb  multifile_analysis_example.ipynb  predict_flying.ipynb  process_data_from_videos.ipynb  random_analysis.ipynb  stim2braidz.csv  stim2braidz.ipynb  velocity_analysis_example.ipynb  video_processor.py
scripts/: get_individual_data.ipynb  get_laser_heading.py  laser_movements.csv  lens.py  liquid_lens_calibration.py  test_msg.py  video_with_keypoints.py
scripts/stepper_motor/: stepper_motor.ino
src/fly_analysis/: .mGSD.py  TREBLE.py  __init__.py  braidz.py  file_group_manager.py  filtering.py  helpers.py  mGSD.py  plotting.py  processing.py  trajectory.py  video.py
src/flyanalysis/: braidz.py  braidzhandler.py  drosophila_circular_analysis.py  filtering.py  helpers.py  plotting.py  processing.py  stats.py  tracking_data_analyzer.py  trajectory.py  video.py
src/flyanalysis/video/templates/: index.html
src/video/: fly_analysis.py
