[project]
name = "flyanalysis"
version = "0.1.0"
description = "Analysis of free-flight data from Braidz"
authors = [{ name = "Elhanan Buchsbaum", email = "elhananby@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
