[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fly-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cvxpy>=1.6.0",
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "pybind11>=2.13.6",
    "pynumdiff>=0.1.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "spatialmath-python>=1.1.11",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.0",
]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Documentation = "https://github.com/username/fly-analysis#readme"
Source = "https://github.com/username/fly-analysis"

[tool.hatch.build.targets.wheel]
packages = ["src/fly_analysis"]