[project]
name = "fly-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.9,<=3.10"
dependencies = [
    "cvxpy>=1.6.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.1",
    "matplotlib>=3.9.3",
    "natsort>=8.4.0",
    "notebook>=7.0.7",
    "numpy>=2.0.2",
    "opencv-contrib-python>=4.10.0.84",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "pynumdiff>=0.1.2",
    "ruff>=0.8.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
fly-analysis = { path = "./", editable = true }
